使用common-fileupload实现上传图片

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -35,4 +35,15 @@
         <url-pattern>/get.action</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>fileUploadServlet</servlet-name>
+        <servlet-class>servlet.FileUploadServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>fileUploadServlet</servlet-name>
+        <url-pattern>/fileUpload.action</url-pattern>
+    </servlet-mapping>
+
 </web-app>
