--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <!--上传-->
     <servlet>
         <servlet-name>ftpServlet</servlet-name>
         <servlet-class>servlet.FtpServlet</servlet-class>
@@ -14,6 +15,7 @@
         <url-pattern>/ftp.action</url-pattern>
     </servlet-mapping>
 
+    <!--添加数据-->
     <servlet>
         <servlet-name>addServlet</servlet-name>
         <servlet-class>servlet.addServlet</servlet-class>
@@ -24,7 +26,7 @@
         <url-pattern>/add.action</url-pattern>
     </servlet-mapping>
 
-
+    <!--获取数据-->
     <servlet>
         <servlet-name>getServlet</servlet-name>
         <servlet-class>servlet.getServlet</servlet-class>
@@ -35,7 +37,7 @@
         <url-pattern>/get.action</url-pattern>
     </servlet-mapping>
 
-
+    <!--图片上传-->
     <servlet>
         <servlet-name>fileUploadServlet</servlet-name>
         <servlet-class>servlet.FileUploadServlet</servlet-class>
@@ -44,6 +46,17 @@
     <servlet-mapping>
         <servlet-name>fileUploadServlet</servlet-name>
         <url-pattern>/fileUpload.action</url-pattern>
+    </servlet-mapping>
+
+   <!--删除-->
+    <servlet>
+        <servlet-name>deleteServlet</servlet-name>
+        <servlet-class>servlet.DeleteServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>deleteServlet</servlet-name>
+        <url-pattern>/delete.action</url-pattern>
     </servlet-mapping>
 
 </web-app>
